--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
       <div class="email">
         <p>Enter your email here*</p>
         <div class="input-css">
+          <form action="https://formsubmit.co/bytech30@gmail.com" method="POST">
           <input type="email" placeholder="eg.johndoe@gmail.com" />
+        </form>
         </div>
         <div class="submit">
+
           <div class="text">
-            <a href="https://jaineelshah3010.github.io/TaskIt/" target="_blank"> Notify Me</a>
+            <a href="#"> Notify Me</a>
           </div>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -90,7 +93,7 @@
           </i
         >
       </span>
-       <span style="font-weight: bold;font-size:14px;">Email.</span><span style="font-size: 15px;"><a href="mailto: bytech30@gmail.com">bytech30@gmail.com</a></span>
+       <span style="font-weight: bold;font-size:14px;">Email.</span><span style="font-size: 15px;"><a href="mailto: jaineelshah30@gmail.com" target="_blank">bytech@gmail.com</a></span>
       </p>
       <div class="hr-cont"></div>
     </div>
