--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="header">
-      <p>BYTE.</p>
+      <a href="index.html"><p>BYTE.</p></a>
       <div class="app">
         <a style="color: white" href="getAppView.html">Get App</a>
       </div>
@@ -43,14 +43,13 @@
       <div class="email">
         <p>Enter your email here*</p>
         <div class="input-css">
-          <form action="https://formsubmit.co/bytech30@gmail.com" method="POST">
-          <input type="email" placeholder="eg.johndoe@gmail.com" />
+          <form action="https://formsubmit.co/91c902e38fbcc3689db578f79b4f702b" method="POST">
+          <input type="email" placeholder="eg.johndoe@gmail.com" name="email" autocomplete="off" required/>
         </form>
         </div>
         <div class="submit">
-
           <div class="text">
-            <a href="#"> Notify Me</a>
+            <a href="#tapped">Notify Me</a>
           </div>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -78,10 +77,19 @@
       </div>
     </div>
     <div class="hr-line"></div>
-    <div class="img-src">
-      <img src="" alt="image1" width="250" />
-      <img src="" alt="image2" width="250" />
-      <img src="" alt="image3" width="250" />
+    <!-- <div class="img-src">
+      <div class="shuffle-container">
+        <div class="item-c">
+          <img src="Images/Image3.png" width="300" />
+        </div>
+        <div class="item-b">
+          <img src="Images/Image2.png" width="300" />
+        </div>
+        <div class="item-a">
+          <img src="Images/Image1.png" width="300" />
+        </div>
+      </div>
+    </div> -->
     </div>
     <div class="contact">
       <p>
